Update Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb

--- a/Part 1: Predicting House Prices/Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb
+++ b/Part 1: Predicting House Prices/Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Coding Companion for Intuitive Deep Learning Part 1 (Annotated)"
+    "# Name: Maryam Shaikh"
+    "# All credit goes to original source at medium.com by Joseph Lee Wei En"
+
    ]
   },
   {
