--- a/Part 1: Predicting House Prices/Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb
+++ b/Part 1: Predicting House Prices/Coding Companion for Intuitive Deep Learning Part 1 Annotated.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coding Companion for Intuitive Deep Learning Part 1 (Annotated)"
-    "# Name: Maryam Shaikh"
-    "# All credit goes to original source at medium.com by Joseph Lee Wei En"
+    "# Coding Companion for Intuitive Deep Learning Part 1 (Annotated) Name: Maryam Shaikh. All credit goes to original source at medium.com by Joseph Lee Wei En"
 
    ]
   },
